# ThunderScope

./: .gitmodules
Firmware/Artix7_PCIe/dso_top/: dso_top.xpr
Firmware/Artix7_PCIe/dso_top/dso_top.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
Firmware/Artix7_PCIe/dso_top/dso_top.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_4.xml
Firmware/Artix7_PCIe/dso_top/dso_top.runs/clk_wiz_0_synth_1/: .vivado.begin.rst  clk_wiz_0.dcp  clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_sim_netlist.v  clk_wiz_0_sim_netlist.vhdl  clk_wiz_0_stub.v  clk_wiz_0_stub.vhdl  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  runme.sh  vivado.jou  vivado.pb
Firmware/Artix7_PCIe/dso_top/dso_top.runs/design_1_axi_bram_ctrl_0_1_synth_1/: .vivado.begin.rst  design_1_axi_bram_ctrl_0_1.dcp  design_1_axi_bram_ctrl_0_1.tcl  design_1_axi_bram_ctrl_0_1.vds  design_1_axi_bram_ctrl_0_1_utilization_synth.pb  design_1_axi_bram_ctrl_0_1_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Firmware/Artix7_PCIe/dso_top/dso_top.runs/design_1_axi_crossbar_0_0_synth_1/: .vivado.begin.rst  design_1_axi_crossbar_0_0.tcl  design_1_axi_crossbar_0_0.vds  design_1_axi_crossbar_0_0_utilization_synth.pb  design_1_axi_crossbar_0_0_utilization_synth.rpt  dont_touch.xdc  (+4 more)
Hardware/The Next Generation/BUF802_Eval/: BUF802_Eval.OutJob  BUF802_Eval.PcbDoc  BUF802_Eval.PrjPcb  Job1.OutJob  Main.SchDoc
Hardware/The Next Generation/BUF802_Eval/Project Outputs for BUF802_Eval/: BUF802_Eval.GBL  BUF802_Eval.XLN  Design Rule Check - BUF802_Eval.drc  Design Rule Check - BUF802_Eval.html  Status Report.Txt
Hardware/The Next Generation/BUF802_Eval/__Previews/: Main.SchDocPreview
Hardware/The Next Generation/Thunderscope_Rev1/: ADC.SchDoc  FE.SchDoc  FE_Channel.SchDoc  FPGA.SchDoc  M2_KEY_M.SchDoc  Main.SchDoc  PLL.SchDoc  Thunderscope_Rev1.PrjPCB  Thunderscope_Rev1.PrjPCBVariants
Hardware/The Next Generation/Thunderscope_Rev1/__Previews/: ADC.SchDocPreview  FE.SchDocPreview  FE_Channel.SchDocPreview  FPGA.SchDocPreview  M2_KEY_M.SchDocPreview  Main.SchDocPreview  PLL.SchDocPreview
Software/waveview/scope_link/: .gitignore  CMakeLists.txt  README.md
Software/waveview/scope_link/include/: PCIe.hpp  bridge.hpp  common.hpp  controller.hpp  postProcessor.hpp  processor.hpp  trigger.hpp
Software/waveview/scope_link/src/: CMakeLists.txt  EVTester.cpp  PCIe.cpp  bridge.cpp  common.cpp  controller.cpp  controller.hpp  logger.cpp  main.cpp  new 1.txt  postProcessor.cpp  processor.cpp  scpiServerThread.cpp  scpiServerThread.hpp  trigger.cpp  waveformServerThread.cpp  waveformServerThread.hpp
Software/waveview/src/util/: testpoints.ts
(+273 files in other folders)
